@@ -1,6 +1,13 @@
 
    Changelog
 
+   __.__.____, v2.19:
+
+   Bugfixes:
+
+   -  format mz: stack segment was never written. That's a fault if it isn't
+      located at the end of the binary; see stack1.asm.
+
    09.06.2024, v2.18:
 
    Bugfixes:
